Project

General

Profile

Actions

Bug #21360

closed

Do not issue 'rbd.get_stripe_unit_count' call if striping feature is not enabled

Added by Jason Dillaman over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Issuing the getter when the feature isn't enabled will result in a (harmless) error printed in the OSD logs:

2017-09-11 22:26:23.418011 7efd67fff700 10 client.1039597.objecter _op_submit oid rbd_header.df7343d1b58ba '@1' '@1' [call rbd.get_stripe_unit_count] tid 4 osd.49
2017-09-11 22:26:23.418016 7efd67fff700 20 client.1039597.objecter get_session s=0x7efd580059b0 osd=49 3
2017-09-11 22:26:23.418020 7efd67fff700 15 client.1039597.objecter _session_op_assign 49 4
2017-09-11 22:26:23.418022 7efd67fff700 15 client.1039597.objecter _send_op 4 to 1.188 on osd.49
2017-09-11 22:26:23.418059 7efd67fff700 20 client.1039597.objecter put_session s=0x7efd580059b0 osd=49 4
2017-09-11 22:26:23.418065 7efd67fff700  5 client.1039597.objecter 1 in flight
2017-09-11 22:26:23.418796 7efd7d479700 10 client.1039597.objecter ms_dispatch 0x55b55ab8f950 osd_op_reply(4 rbd_header.df7343d1b58ba [call] v0'0 uv0 ondisk = -8 ((8) Exec format error)) v8
2017-09-11 22:26:23.418805 7efd7d479700 10 client.1039597.objecter in handle_osd_op_reply
2017-09-11 22:26:23.418810 7efd7d479700  7 client.1039597.objecter handle_osd_op_reply 4 ondisk uv 0 in 1.188 attempt 0
2017-09-11 22:26:23.418815 7efd7d479700 10 client.1039597.objecter  op 0 rval -8 len 0
Actions #1

Updated by Jason Dillaman over 6 years ago

  • Description updated (diff)
Actions #2

Updated by Mykola Golub over 6 years ago

  • Status changed from New to In Progress
  • Assignee set to Mykola Golub
Actions #3

Updated by Mykola Golub over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by Jason Dillaman over 6 years ago

  • Status changed from Fix Under Review to Resolved
  • Backport deleted (luminous,jewel)
Actions

Also available in: Atom PDF