librbd: fix don't send get_stripe_unit_count if striping is not enabled

Fixes: http://tracker.ceph.com/issues/21360

Signed-off-by: Yanhu Cao <gmayyyha@gmail.com>